classDiagram
%% ===== Styles =====
classDef master fill:#e8f1ff,stroke:#4a78ff,stroke-width:1px,color:#0b2b6b
classDef trans  fill:#e8f9ef,stroke:#2e8b57,stroke-width:1px,color:#124d2d
classDef rel    fill:#fffbea,stroke:#b08400,stroke-width:1px,color:#5f4500
classDef hist   fill:#f3e8ff,stroke:#7a3af9,stroke-width:1px,color:#361b6b

%% ===== Masters (m_) =====
class m_companies {
  <<会社マスタ>>
  +id : BIGINT
  +name : VARCHAR(191)
  +code : VARCHAR(64)
  +timezone : VARCHAR(64)
  +start_of_week : TINYINT
}
class m_departments {
  <<部門マスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +name : VARCHAR(191)
  +code : VARCHAR(64)
  +parent_id : BIGINT
}
class m_users {
  <<ユーザーマスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +department_id : BIGINT
  +email : VARCHAR(191)
  +name_last : VARCHAR(64)
  +name_first : VARCHAR(64)
  +name_last_kana : VARCHAR(128)
  +name_first_kana : VARCHAR(128)
  +status : ENUM
}
class m_employments {
  <<雇用情報マスタ>>
  +id : BIGINT
  +user_id : BIGINT
  +employment_type : ENUM
  +base_hourly_rate : DECIMAL(10,2)
  +base_monthly_salary : DECIMAL(12,2)
  +work_hours_per_week : DECIMAL(5,2)
  +effective_from : DATE
  +effective_to : DATE
}
class m_roles {
  <<ロールマスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +slug : VARCHAR(64)
  +name : VARCHAR(191)
}
class m_permissions {
  <<権限マスタ>>
  +id : BIGINT
  +key : VARCHAR(128)
  +description : TEXT
}
class m_pay_items {
  <<賃金項目マスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +code : VARCHAR(64)
  +name : VARCHAR(191)
  +kind : ENUM   %% earning/deduction
  +calc_base : ENUM
}
class m_holidays {
  <<休日マスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +date : DATE
  +name : VARCHAR(191)
  +is_national : TINYINT
}
class m_approval_flows {
  <<承認フローマスタ>>
  +id : BIGINT
  +company_id : BIGINT
  +name : VARCHAR(191)
  +target : ENUM   %% time_entry/leave_request/generic
  +is_active : TINYINT
}
class m_approval_steps {
  <<承認ステップマスタ>>
  +id : BIGINT
  +approval_flow_id : BIGINT
  +step_order : SMALLINT
  +approver_type : ENUM  %% role/user/manager
  +approver_role_id : BIGINT
  +approver_user_id : BIGINT
}

%% ===== Transactions (t_) =====
class t_schedules {
  <<勤務予定>>
  +id : BIGINT
  +user_id : BIGINT
  +work_date : DATE
  +start_time : TIME
  +end_time : TIME
  +break_minutes : SMALLINT
  +note : VARCHAR(255)
}
class t_time_entries {
  <<勤怠実績/打刻>>
  +id : BIGINT
  +user_id : BIGINT
  +work_date : DATE
  +clock_in : DATETIME
  +clock_out : DATETIME
  +break_minutes : SMALLINT
  +source : ENUM         %% web/mobile/ic/import
  +status : ENUM         %% draft/submitted/approved/rejected
  +late_minutes : SMALLINT
  +early_leave_minutes : SMALLINT
  +overtime_minutes : SMALLINT
  +approval_binding_id : BIGINT
}
class t_leave_requests {
  <<休暇申請>>
  +id : BIGINT
  +user_id : BIGINT
  +type : ENUM           %% annual/sick/special/unpaid
  +start_date : DATE
  +end_date : DATE
  +days : DECIMAL(4,2)
  +reason : VARCHAR(255)
  +status : ENUM         %% draft/submitted/approved/rejected
  +approval_binding_id : BIGINT
}
class t_leave_balances {
  <<休暇残高>>
  +id : BIGINT
  +user_id : BIGINT
  +type : ENUM           %% annual/sick/special
  +period_start : DATE
  +period_end : DATE
  +granted : DECIMAL(4,2)
  +taken : DECIMAL(4,2)
  +carryover : DECIMAL(4,2)
}
class t_pay_runs {
  <<給与締め/支給処理>>
  +id : BIGINT
  +company_id : BIGINT
  +period_start : DATE
  +period_end : DATE
  +pay_date : DATE
  +status : ENUM         %% draft/calculating/finalized/paid
}
class t_pay_slips {
  <<給与明細>>
  +id : BIGINT
  +pay_run_id : BIGINT
  +user_id : BIGINT
  +gross_amount : DECIMAL(12,2)
  +total_deduction : DECIMAL(12,2)
  +net_amount : DECIMAL(12,2)
  +currency : CHAR(3)
  +status : ENUM         %% draft/finalized/paid
}
class t_pay_lines {
  <<給与明細行>>
  +id : BIGINT
  +pay_slip_id : BIGINT
  +pay_item_id : BIGINT
  +quantity : DECIMAL(10,2)
  +rate : DECIMAL(12,2)
  +amount : DECIMAL(12,2)
  +memo : VARCHAR(255)
}
class t_approval_bindings {
  <<承認対象紐づけ>>
  +id : BIGINT
  +flow_id : BIGINT
  +target_table : VARCHAR(64)
  +target_id : BIGINT
  +current_step : SMALLINT
  +status : ENUM         %% draft/in_review/approved/rejected
}

%% ===== Relations (r_) =====
class r_user_roles {
  <<ユーザー×ロール対応>>
  +id : BIGINT
  +user_id : BIGINT
  +role_id : BIGINT
}
class r_role_permissions {
  <<ロール×権限対応>>
  +id : BIGINT
  +role_id : BIGINT
  +permission_id : BIGINT
}

%% ===== History (h_) =====
class h_approvals {
  <<承認履歴>>
  +id : BIGINT
  +binding_id : BIGINT
  +step_order : SMALLINT
  +approver_user_id : BIGINT
  +action : ENUM         %% approve/reject/comment
  +comment : VARCHAR(255)
  +acted_at : DATETIME
}

%% ===== Edges =====
m_companies "1" --> "0..*" m_departments
m_companies "1" --> "0..*" m_users
m_departments "1" --> "0..*" m_users
m_users "1" --> "0..*" m_employments

m_roles "1" --> "0..*" r_user_roles
m_users "1" --> "0..*" r_user_roles

m_roles "1" --> "0..*" r_role_permissions
m_permissions "1" --> "0..*" r_role_permissions

m_users "1" --> "0..*" t_schedules
m_users "1" --> "0..*" t_time_entries
m_users "1" --> "0..*" t_leave_requests
m_users "1" --> "0..*" t_leave_balances
m_companies "1" --> "0..*" m_holidays

m_companies "1" --> "0..*" m_pay_items
m_companies "1" --> "0..*" t_pay_runs
t_pay_runs "1" --> "0..*" t_pay_slips
m_users "1" --> "0..*" t_pay_slips
t_pay_slips "1" --> "0..*" t_pay_lines
m_pay_items "1" --> "0..*" t_pay_lines

m_approval_flows "1" --> "0..*" m_approval_steps
m_approval_flows "1" --> "0..*" t_approval_bindings
t_approval_bindings "1" --> "0..*" h_approvals
m_users "1" --> "0..*" h_approvals

t_leave_requests "1" --> "0..*" t_approval_bindings
t_time_entries  "1" --> "0..*" t_approval_bindings

%% Apply styles
class m_companies master
class m_departments master
class m_users master
class m_employments master
class m_roles master
class m_permissions master
class m_pay_items master
class m_holidays master
class m_approval_flows master
class m_approval_steps master

class t_schedules trans
class t_time_entries trans
class t_leave_requests trans
class t_leave_balances trans
class t_pay_runs trans
class t_pay_slips trans
class t_pay_lines trans
class t_approval_bindings trans

class r_user_roles rel
class r_role_permissions rel

class h_approvals hist